--- a/menu_sol.html
+++ b/menu_sol.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" >
 
 $(document).ready(function(e) {
-   
+//comentario nuevo de prueba   
 	//crear lista desordenada menu añadirla delante de la primera capa
 	var menu= $('<ul></ul>');
 	var capas=$('div.module');
